fix: fixed bug where white space was appearing at bottom of about us page.

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -26,8 +26,8 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 .alex-container {
